src/app/users/users-list/usersList.component.scss
@import '../../../assets/scss/mixins.scss';

content-header-component {
  height: 40px;
  margin-top: 60px;
}

content-component {
  margin-top: 15px;
  margin-bottom: 80px;
}

.list-controls {
  @include clearfix();

  .sort-by {
    float: left;
    line-height: 40px;
  }

  .search {
    position: relative;
    float: right;
    height: 40px;
    width: 250px;
    border: 1px solid #ddd;
    background-color: #fff;

    label {
      position: absolute;
      left: 0;
      top: 0;
      width: 40px;
      height: 40px;
      padding: 10px;

      svg {
        width: 20px;
        height: 20px;
      }
    }

    input {
      position: absolute;
      right: 0;
      top: 0;
      width: calc(100% - 40px);
      margin: 0;
      padding: 0 5px 0 0;
      line-height: 38px;
      border: none;
      box-shadow: none;
      outline: none;
    }
  }
}

data-table-row {
  cursor: pointer;
}

.user-general {
  user-avatar {
    float: left;
    margin-top: 4px;
  }

  .user-meta {
    float: left;
    margin-left: 15px;

    h3 {
      margin: 0 0 3px;
      font-size: 16px;
    }

    h4 {
      margin: 0;
      font-size: 13px;
      font-weight: 400;
      color: #828282;
    }
  }
}

